@@ -1,2 +1,0 @@
-#define NO_LOCALE_CHARMAP 1
-#include "encoding.c"
