@@ -1,2 +1,0 @@
-const char ruby_exec_prefix[] = "";
-const char ruby_initial_load_paths[] = "";
